# api.yaml
@@ -94,36 +94,28 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/NewImage"
-  /user/{username}/image:
+                $ref: "#/components/schemas/Image"
+  /album/profile:
     post:
-      operationId: uploadNewProfilePicV1
-      summary: upload a new profile pic
-      parameters:
-        - in: path
-          name: uuid
-          required: true
-          schema:
-            type: string
-            format: uuid
+      operationId: uploadNewProfileImageV1
+      summary: upload a new profile image
       responses:
         '201':
           description: created image
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/NewImage"
+                $ref: "#/components/schemas/Image"
   /user/{username}/album:
     get:
       operationId: getAlbumsForUserV1
       summary: get albums for a user
       parameters:
         - in: path
-          name: uuid
+          name: username
           required: true
           schema:
             type: string
-            format: uuid
       responses:
         '200':
           description: albums for a user
