# internal/controller/user.go
@@ -1,20 +1,20 @@
 package controller
 
 import (
+	"github.com/danielmunro/otto-image-service/internal/auth/model"
 	"github.com/danielmunro/otto-image-service/internal/service"
-	"github.com/danielmunro/otto-image-service/internal/uuid"
+	"github.com/google/uuid"
 	"net/http"
 )
 
-// UploadNewProfilePicV1 - upload a new profile pic
-func UploadNewProfilePicV1(w http.ResponseWriter, r *http.Request) {
-	userUuid := uuid.GetUuidFromPathSecondPosition(r.URL.Path)
-	service.CreateDefaultAuthService().DoWithValidSessionAndUser(w, r, userUuid, func() (interface{}, error) {
+// UploadNewProfileImageV1 - upload a new profile pic
+func UploadNewProfileImageV1(w http.ResponseWriter, r *http.Request) {
+	service.CreateDefaultAuthService().DoWithValidSession(w, r, func(session *model.Session) (interface{}, error) {
 		tempFile, fileHeader, err := r.FormFile("image")
 		if err != nil {
 			return nil, err
 		}
 		return service.CreateDefaultImageService().
-			CreateNewProfileImage(userUuid, tempFile, fileHeader.Filename, fileHeader.Size)
+			CreateNewProfileImage(uuid.MustParse(session.User.Uuid), tempFile, fileHeader.Filename, fileHeader.Size)
 	})
 }
